api for motel is done
